--- a/style.css
+++ b/style.css
@@ -7,19 +7,11 @@
 .faq{
   padding-top: 60px; 
   justify-content: inline-block;
-  padding: 0% 50px;
+  padding: 0% 20px;
   font-family: 'Quicksand', sans-serif; 
   color: #143535; 
 }
 
-.anti-bug{
-  padding-top: 60px;
-  display: flex;
-  justify-content: inline-block;
-  padding: 0% 50px;
-  font-family: 'Quicksand', sans-serif; 
-  color: #143535;  
-}
 
 .logo{
   padding-top:15px ;
@@ -43,9 +35,12 @@ ul {
   font-family: 'Poppins', sans-serif;
   margin-bottom: 80px;
   padding-top: 70px;
-  font-size: 25px;
+  margin-left: 10%;
+  margin-right: 10%;
+  font-size: 24px;
   text-align: center;
 }
+
 
 .titulo{
   padding-top: 10%;
@@ -55,7 +50,15 @@ ul {
   color:#2B2B2B ;
 }
 
-
+.faleconosco{
+  text-align: center;
+  color:#2B2B2B ;
+  font-family: 'Nunito', sans-serif;
+  font-size: 45px;
+  padding-top: 10%;
+  padding-bottom: 8%;
+  text-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1);
+}
 
 .titulo1{
   padding-top: 70px;
@@ -104,29 +107,75 @@ body{
   text-decoration: none;
 }
 
+.map-card {
+  background: #FFD39B;
+  width: 1100px;
+  border-radius: 16px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+  overflow: hidden;
+  margin: 20px auto;
+  font-family: Arial, sans-serif;
+}
 
+.map-header {
+  padding: 16px;
+  font-size: 30px;
+  text-align: center;
+  font-weight: bold;
+  color: #143535;
+  border-bottom: 1px solid #ffffff;
+}
 
+.map-container {
+  width: 100%;
+  height: 500px;
+}
 
+.map-container iframe {
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+
+.ong-card{
+  background-color: #FFD39B;
+  border-radius: 16px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+  margin: 40px auto;
+  padding: 30px;
+  max-width: 900px;
+  text-align: center;
+  font-family: 'Nunito', sans-serif;
+  color: #2B2B2B;
+}
 
 .texto2 {
-  background-color: #FFD39B;
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
-  height: 220px;
   margin: 30px auto 0 auto; 
- margin-left: 15%;
- margin-right: 15%;
+  margin-left: 15%;
+  margin-right: 15%;
   text-align: center;
   color: #2B2B2B;
   font-family: 'Nunito', sans-serif ;
-  font-size: 25px;     
+  font-size: 29px;     
 }
 
 .contato{
   font-family: 'Nunito', sans-serif ;
   display: flex;
   justify-content: center;
-  margin: 6%;
+  padding-right:20px ;
+  padding-left: 20px;
+  padding-bottom: 60px;
+  font-size: 20px;
+}
+
+.fale{
+  padding-top: 60px;
+  margin: 0px;
+  text-align: center;
+  font-family: 'Nunito', sans-serif ;
+  font-size: 40px;
+  color:#2B2B2B ;
 }
 
 .icone{
@@ -135,7 +184,6 @@ body{
   display: flex;
   flex-direction: column; 
   align-items: center;     
-  background-color: #FFD39B;
   margin-left: 15%;
   margin-right: 15%;
   padding: 20px;
@@ -145,7 +193,7 @@ body{
 .texto3{
   background-color:#FFF8E7;
   color: #2B2B2B;
-  font-size: 20px;
+  font-size: 25px;
   margin-top: 12px; 
   max-width: 200px;
   text-align: center;
@@ -164,39 +212,59 @@ body{
   transition: 0.5s;
 }
 
-.barra{
-  transition: 0.4s;
+.linha-hover{
+    cursor: pointer;
+    position: relative;
+    display: inline-block;
 }
 
-.barra:hover{
-  background-color: #FFBE76;
-  border-radius: 20px;
+.linha-hover::after{
+    content:"";
+    position: absolute;
+    border-radius: 12px;
+    left: 0;
+    bottom: 0;
+    height: 5px;
+    width: 0;
+    background-color: #FFBE76;
+    transition: width 0.2s ease;
+}
+
+.linha-hover:hover::after{
+    width: 100%;
 }
 
 .texto4{
-  background-color: #FFD39B;
-  border-radius: 20px;
-  height: 220px;
   margin: 70px;
   padding-top: 40px;
   margin-bottom: 0px;
   text-align: center;
   color: #2B2B2B;
   font-family: 'Nunito', sans-serif ;
-  font-size: 20px;
+  font-size: 28px;
   display: block;
+}
+
+.texto4card{
+  background-color: #FFD39B;
+  border-radius: 12px;
+  box-shadow: 0px 3px 6px rgba(0,0,0,0.1);
+  transition: transform 0.2s;
+  margin: 20px auto;
+  max-width: 900px;
+  padding-bottom: 30px;
 }
 
 .texto-icone{
   font-family: 'Nunito', sans-serif ;
-  font-size: 20px;
+  font-size: 28px;
   color:#2B2B2B ;
   margin: 10px;
 }
 
 .descricao-icone{
   font-family: 'Nunito', sans-serif ;
-  font-size: 15px;
+  font-size: 20px;
   color:#2B2B2B ;
 }
 
@@ -205,6 +273,7 @@ body{
   align-items: center;
   justify-content: space-around; 
   margin: 40px 20px;
+  gap: 10px;
 }
 
 .icone-item{
@@ -230,40 +299,67 @@ body{
   padding-top: 2%;
 }
 
-.accordion-button {
-  background-color: #ffffff;
-  color: #2B2B2B;
-  font-weight: bold;
-}
 
-.accordion-button:not(.collapsed) {
-  background-color: #E0703C;
-  color: #000;
-  box-shadow: none; 
+.accordion-custom {
+  width: 80%;
+  margin: 0 auto;
+  margin-top: 40px;
+  font-family: 'Nunito', sans-serif;
 }
 
 .accordion-item {
-  border-radius: 10px;
+  border: 2px solid #E0703C;
+  border-radius: 12px;
+  margin-bottom: 15px;
   overflow: hidden;
-  margin-bottom: 10px;
+  background: #ffffff;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.1);
 }
 
-#accordionPerguntas {
-  width: 60%;            
-  margin-left: auto;     
-  margin-right: 5%; 
-  padding-top: 10%;     
+.accordion-header {
+  width: 100%;
+  text-align: left;
+  background: #FFD39B;
+  color: #2B2B2B;
+  font-weight: bold;
+  font-size: 20px;
+  padding: 16px;
+  border: none;
+  cursor: pointer;
+  transition: background 0.3s;
 }
+
+.accordion-header:hover {
+  background: #E0703C;
+  color: #fff;
+}
+
+.accordion-content {
+  max-height: 0;
+  overflow: hidden;
+  padding: 0 16px;
+  transition: max-height 0.4s ease, padding 0.3s ease;
+  font-size: 18px;
+  color: #2B2B2B;
+}
+
+.accordion-item.active .accordion-content {
+  max-height: 400px; 
+  padding: 16px;
+}
+
 
 .formulario-contato input,
 .formulario-contato textarea {
   display: block;
   margin: 10px auto;
   width: 80%;
+  height: 60px;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 10px;
 }
+
 
 .formulario-contato button{
   color: #ffffff;
@@ -272,15 +368,21 @@ body{
   border-radius: 5px;
   font-weight: bold;
   cursor: pointer;
-  width: 20%;
-  height: 40%;
+  width: 30%;
+  height: 50%;
 }
 
 .botao{
   display: block;
   margin: 10px auto;
+  margin-top: 30px;
   width: 80%;
-  padding: 10px;
+  padding: 20px;
+}
+
+.botao-texto{
+font-size: 20px;
+
 }
 
 .formulario-contato button:hover{
@@ -326,8 +428,19 @@ form{
 
 .historia{
   font-family: 'Nunito', 'sans-serif';
-  font-size: 25px;
+  font-size: 30px;
   padding-right: 20%;
+}
+
+.card-contato{
+  background-color: #ffffff;
+  padding: 2px;
+  border-radius: 12px;
+  box-shadow: 0px 3px 6px rgba(0,0,0,0.1);
+  transition: transform 0.2s;
+  margin: 20px auto;
+  width: 30%;
+  max-width: 900px;
 }
 
 .link1{
@@ -346,9 +459,9 @@ form{
   display: inline-block;
   background-color: #FF6B6B; 
   color: white;
-  font-size: 18px;
+  font-size: 20px;
   font-weight: bold;
-  padding: 12px 24px;
+  padding: 18px 28px;
   margin-top: 20px;
   border-radius: 30px;
   text-decoration: none;
@@ -363,5 +476,9 @@ form{
 
 .icone-botao{
   padding-right: 10px;
+}
+
+.barra{
+  margin: 5%;
 }
 
