--- a/style.css
+++ b/style.css
@@ -107,43 +107,16 @@ body{
   text-decoration: none;
 }
 
-.map-card {
-  background: #FFD39B;
-  width: 1100px;
-  border-radius: 16px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-  overflow: hidden;
-  margin: 20px auto;
-  font-family: Arial, sans-serif;
-}
 
-.map-header {
-  padding: 16px;
-  font-size: 30px;
-  text-align: center;
-  font-weight: bold;
-  color: #143535;
-  border-bottom: 1px solid #ffffff;
-}
-
-.map-container {
-  width: 100%;
-  height: 500px;
-}
-
-.map-container iframe {
-  width: 100%;
-  height: 100%;
-  border: 0;
-}
 
 .ong-card{
   background-color: #FFD39B;
   border-radius: 16px;
   box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-  margin: 40px auto;
+  margin: 30px auto 0 auto; 
+ margin-left: 15%;
+ margin-right: 15%;
   padding: 30px;
-  max-width: 900px;
   text-align: center;
   font-family: 'Nunito', sans-serif;
   color: #2B2B2B;
